--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,49 +2,73 @@
 <html>
 
 <head>
-  <meta charset="UTF-8">
-  <title>Gerador de Nomes Aleatórios</title>
+  <meta charset="utf-8">
+  <title>Distribuir itens aleatoriamente</title>
   <style>
-    /* estilo para centralizar e espaçar os elementos */
     body {
+      font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      min-height: 100vh;
+      gap: 50px;
     }
 
     form {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-bottom: 2rem;
     }
 
-    label,
-    input {}
-
-    input {
-      margin-bottom: 1rem;
-      max-width: 50px;
+    label {
+      font-weight: bold;
+      margin-bottom: 10px;
     }
 
-    label~input {
-      margin-right: 10px;
+    input[type="number"] {
+      width: 50px;
+      margin-right: 5px;
+      text-align: right;
+      margin-bottom: 10px;
+    }
+
+    #itens {
+      margin-top: 20px;
+    }
+
+    .item {
+      margin-bottom: 10px;
+    }
+
+    table {
+      margin-top: 20px;
+      border-collapse: collapse;
+    }
+
+    th,
+    td {
+      padding: 5px;
+      border: 1px solid black;
+      text-align: center;
+    }
+
+    th {
+      background-color: #f2f2f2;
+    }
+
+    tr[data-item]:hover {
+      background-color: #f2f2f2;
     }
   </style>
 </head>
 
 <body>
-  <h1>Gerar Fatias Aleatóriamente</h1>
+  <h1>Distribuir itens aleatoriamente</h1>
   <form>
-    <label for="num-campos">Quantos Fatias deseja adicionar?</label>
-    <input type="number" id="num-campos" name="num-campos" min="1" max="14" required>
-    <button type="button" onclick="adicionarCampos()">Adicionar campos</button>
+    <label for="num_itens">Quantidade de itens:</label>
+    <input type="number" id="num_itens" name="num_itens" required min="1">
+    <button type="submit">Gerar planilha</button>
   </form>
-  <div id="campos"></div>
-  <button type="button" onclick="gerarNomes()">Gerar Nomes</button>
-  <table id="tabela-resultados"></table>
+  <div id="itens"></div>
   <script src="script.js"></script>
 </body>
 
